# CSCE622

./: .gitmodules
finalproject/: CMakeLists.txt  build_mesh_cgal.cpp  circulators.h  final_report.md  hds_mesh.h  hdsmesh.h  iterators.h  mesh_simplification.cpp  mesh_simplification_cgal.cpp  meshloader.cpp  meshloader.h  meshsimplifier.h  priority_queue.h  proposal.md  stringutils.cpp  stringutils.h  taggedvalue.h  test_hds.cpp
finalproject/tests/: CMakeLists.txt  test_hds.cpp
homework1/: Makefile  answer.md  p1_test.cpp  p1_triple.hpp  p2_test.cpp  p2_triple.hpp  p3_test.cpp  p4_test.cpp
homework2/: Makefile  answer.md  p1_accessor.cpp  p1_copy_assign_op.cpp  p1_copy_ctr.cpp  p1_default_ctr.cpp  p1_equality_op.cpp  p1_inequality_op.cpp  p1_move.cpp  p2_test.cpp  p3.cpp  p4.cpp
homework3/: CMakeLists.txt  Readme.md  graph0.txt  graph_utils.h  main.cpp  path_count.h  path_count_random_graph.cpp  path_count_with_file.cpp  query0.txt  report.html  report.md
